[gd_scene load_steps=44 format=2]

[ext_resource path="res://Enemies/archer/xenarcher.gd" type="Script" id=1]
[ext_resource path="res://Enemies/archer/download_18.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 704, 1216, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1216, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 26 )

[sub_resource type="CapsuleShape2D" id=72]
radius = 16.0
height = 0.0

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 16, 2.5 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 32, 4 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 32, 4 )

[node name="xenshooter" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "Shoot"

[node name="body" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 0, 6 )
shape = SubResource( 6 )

[node name="GravCol" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 72 )

[node name="head" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2( 0, -23 )
shape = SubResource( 21 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AimRight" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionRight" type="CollisionShape2D" parent="AimRight"]
position = Vector2( 192, 0 )
shape = SubResource( 35 )

[node name="AimLeft" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionLeft" type="CollisionShape2D" parent="AimLeft"]
position = Vector2( -192, 0 )
shape = SubResource( 36 )

[node name="MindTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="body" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="body_entered" from="AimRight" to="." method="_on_AimRight_body_entered"]
[connection signal="body_entered" from="AimLeft" to="." method="_on_AimLeft_body_entered"]
